# roboto_origin

./: .gitignore  LICENSE  README.md  README_CN.md  README_cn.md  sync_subtrees.sh
assets/: BOM.md  BOM_EN.md  Internal Roboto D-BOM.xlsx
mjcf/: atom01.xml
modules/atom01_deploy/: .gitmodules  99-auto-up-devs.rules  README.md  README_CN.md  can_test.sh  linux-dtb-legacy-rockchip-rk3588_1.2.0_arm64.deb  rt_fastdds_profile.xml  start_robot.sh
modules/atom01_deploy/imu/: README.md
modules/atom01_deploy/imu/src/hipnuc_imu/: CMakeLists.txt  package.xml
modules/atom01_deploy/imu/src/hipnuc_imu/config/: hipnuc_config.yaml
modules/atom01_deploy/imu/src/hipnuc_imu/include/hipnuc_imu/: hipnuc_imu.h
modules/atom01_deploy/imu/src/hipnuc_imu/launch/: imu_spec_msg.launch.py
modules/atom01_deploy/imu/src/hipnuc_imu/src/: can_interface.cpp  hipnuc_imu_node.cpp  serial_port.cpp  sub_spec.cpp
modules/atom01_deploy/imu/src/hipnuc_lib_package/: CMakeLists.txt  package.xml
modules/atom01_deploy/imu/src/hipnuc_lib_package/src/: canopen_parser.c  hipnuc_can_common.c  hipnuc_dec.c  hipnuc_j1939_parser.c
modules/atom01_deploy/motors/src/motors/: CMakeLists.txt  package.xml
modules/atom01_deploy/motors/src/motors/config/: motors.yaml
modules/atom01_deploy/motors/src/motors/launch/: motors_spec_msg.launch.py
modules/atom01_deploy/motors/src/motors/scripts/: verify_kinematics.py
modules/atom01_deploy/motors/src/motors/src/: SocketCAN.cpp  SocketCAN.hpp  close_chain_mapping.cpp  close_chain_mapping.hpp  dm_motor_driver.cpp  dm_motor_driver.hpp  motor_driver.cpp  motor_driver.hpp  motors_node.cpp  motors_node.hpp  timer.hpp  utils.hpp
modules/atom01_deploy/motors/src/motors/srv/: ControlMotor.srv
modules/atom01_description/mjcf/: atom01.xml  atom01_terrain.xml
modules/atom01_train/robolab/robolab/assets/robots/: roboparty.py
modules/atom01_train/robolab/robolab/tasks/direct/attn_enc/: atom01_attn_enc_env_cfg.py  attn_enc_env.py
modules/atom01_train/robolab/robolab/tasks/direct/attn_enc/agents/: atom01_attn_enc_agent_cfg.py
modules/atom01_train/robolab/robolab/tasks/direct/base/: base_config.py  base_env.py  scene_cfg.py
modules/atom01_train/robolab/scripts/rsl_rl/: play.py
robolab/: __init__.py
scripts/mujoco/: sim2sim_atom01.py  sim2sim_atom01_attn_enc.py  sim2sim_atom01_interrupt.py
src/inference/: CMakeLists.txt
src/inference/config/: inference.yaml  inference_beyondmimic.yaml  inference_interrupt.yaml
src/inference/launch/: inference.launch.py
src/inference/models/: policy.onnx  policy_interrupt.onnx
src/inference/src/: inference_node.cpp  inference_node.hpp
urdf/: atom01.urdf
usd/: .asset_hash  config.yaml
usd/configuration/: atom01_physics.usd
